# ironic

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  TODO.md  build.rs  deny.toml  rust-toolchain.toml  rust_framework_full_docs.md  rustfmt.toml
.github/: FUNDING.yml  (+2 more)
crates/rustframe/: Cargo.toml
crates/rustframe-cli/: Cargo.toml  README.md
crates/rustframe-cli/src/: cli.rs  main.rs
crates/rustframe-cli/src/commands/: cargo.rs  doctor.rs  generate.rs  mod.rs  new.rs
crates/rustframe-cli/src/generators/: mod.rs  project.rs  templates.rs
crates/rustframe-cli/tests/: cli.rs
crates/rustframe-config/: Cargo.toml
crates/rustframe-config/src/: lib.rs
crates/rustframe-core/: Cargo.toml
crates/rustframe-core/src/: lib.rs
crates/rustframe-di/: Cargo.toml
crates/rustframe-di/src/: lib.rs
crates/rustframe-http/: Cargo.toml
crates/rustframe-http/src/: handler.rs  lib.rs  observability.rs  pipeline.rs  route.rs
crates/rustframe-openapi/: Cargo.toml
crates/rustframe-openapi-macros/: Cargo.toml
crates/rustframe-openapi-macros/src/: lib.rs
crates/rustframe-openapi/src/: axum.rs  document.rs  lib.rs
crates/rustframe-openapi/tests/: openapi.rs
crates/rustframe-platform/: Cargo.toml
crates/rustframe-platform-axum/: Cargo.toml
crates/rustframe-platform-axum/src/: lib.rs
crates/rustframe-platform/src/: lib.rs
crates/rustframe-testing/: Cargo.toml  README.md
crates/rustframe-testing/src/: application.rs  error.rs  lib.rs
crates/rustframe-testing/tests/: testing.rs
crates/rustframe/benches/: overhead.rs
crates/rustframe/src/: lib.rs
crates/rustframe/tests/: ui.rs
crates/rustframe/tests/ui/fail/: injectable_non_arc.rs  injectable_non_arc.stderr  main_requires_async.rs  main_requires_async.stderr  missing_extractor.rs  missing_extractor.stderr  module_requires_metadata.rs  module_requires_metadata.stderr  non_async_route.rs  non_async_route.stderr
crates/rustframe/tests/ui/pass/: application.rs
examples/auth-api/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  ironic.toml
examples/auth-api/src/: app.rs  main.rs  welcome.rs
examples/auth-api/src/modules/: mod.rs
examples/auth-api/src/modules/auth/: mod.rs
examples/auth-api/src/modules/auth/controller/: auth_controller.rs
examples/auth-api/src/modules/auth/decorators/: current_user.rs  mod.rs  roles.rs
examples/auth-api/src/modules/auth/dto/: login_dto.rs  mod.rs  refresh_dto.rs  register_dto.rs  token_response.rs
examples/auth-api/src/modules/auth/entities/: mod.rs  role.rs  user.rs
examples/auth-api/src/modules/auth/guards/: auth_guard.rs  mod.rs  role_guard.rs
examples/auth-api/src/modules/auth/services/: auth_service.rs  mod.rs  password_service.rs
examples/auth-api/src/modules/auth/tests/: integration.rs  mod.rs  unit.rs
examples/auth-api/src/modules/example/: mod.rs
examples/auth-api/src/modules/example/controller/: example_controller.rs  mod.rs
examples/auth-api/src/modules/example/services/: example_service.rs
examples/auth-api/src/modules/example/tests/: integration.rs  mod.rs
examples/basic-api/: Cargo.toml  Makefile  README.md  docker-compose.yml  ironic.toml
examples/basic-api/src/: app.rs  main.rs  welcome.rs
examples/basic-api/src/modules/example/dto/: create_example_dto.rs  mod.rs  update_example_dto.rs
examples/basic-api/src/modules/example/entities/: example.rs  mod.rs
examples/basic-api/src/modules/example/services/: mod.rs
examples/basic-api/src/modules/example/tests/: integration.rs  unit.rs
examples/blog-api/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  ironic.toml
examples/blog-api/src/: app.rs  main.rs  welcome.rs
examples/blog-api/src/modules/: mod.rs
examples/blog-api/src/modules/auth/: mod.rs
examples/blog-api/src/modules/auth/controller/: auth_controller.rs  mod.rs
examples/blog-api/src/modules/auth/dto/: login_dto.rs  mod.rs  token_response.rs
examples/blog-api/src/modules/auth/guards/: jwt_guard.rs
examples/blog-api/src/modules/auth/services/: auth_service.rs  mod.rs
examples/blog-api/src/modules/blogs/: mod.rs
examples/blog-api/src/modules/blogs/controller/: blogs_controller.rs  categories_controller.rs
examples/blog-api/src/modules/blogs/dto/: blog_filter_dto.rs  create_blog_dto.rs  create_category_dto.rs  mod.rs  update_blog_dto.rs
examples/blog-api/src/modules/blogs/entities/: blog_post.rs  category.rs  mod.rs
examples/blog-api/src/modules/blogs/repositories/: blog_repository.rs  category_repository.rs
examples/blog-api/src/modules/blogs/services/: blog_service.rs  mod.rs
examples/blog-api/src/modules/blogs/tests/: blog_tests.rs
examples/blog-api/src/modules/decorators/: pagination.rs
examples/blog-api/src/modules/exception_filters/: mod.rs  not_found_filter.rs
examples/blog-api/src/modules/interceptors/: timing_interceptor.rs
examples/blog-api/src/modules/stats/: mod.rs
examples/blog-api/src/modules/tasks/: mod.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/rest-api/: Cargo.toml
examples/rest-api/src/: main.rs
examples/todo-api/: Cargo.toml  ironic.toml
examples/todo-api/src/: app.rs  main.rs
examples/todo-api/src/modules/todos/: mod.rs
examples/todo-app/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  ironic.toml
examples/todo-app/docs/: index.md
examples/todo-app/docs/api/: todos.md
examples/todo-app/docs/database/: migrations.md  schema.md
examples/todo-app/docs/guide/: architecture.md  deployment.md  development.md  setup.md
examples/todo-app/migrations/: 20250101000000_create_todos_table.sql
examples/todo-app/src/: app.rs  main.rs  welcome.rs
examples/todo-app/src/modules/todos/: mod.rs
examples/todo-app/src/platform/: config.rs  database.rs  mod.rs  telemetry.rs
fuzz/: Cargo.toml
fuzz/corpus/http_parse/: delete_with_id  query_params  simple_get  simple_post
fuzz/fuzz_targets/: http_parse.rs
(+652 files in other folders)
