[workspace]
resolver = "3"
members = [
    "crates/rustframe",
    "crates/rustframe-common",
    "crates/rustframe-cli",
    "crates/rustframe-config",
    "crates/rustframe-core",
    "crates/rustframe-di",
    "crates/rustframe-http",
    "crates/rustframe-macros",
    "crates/rustframe-openapi",
    "crates/rustframe-openapi-macros",
    "crates/rustframe-platform",
    "crates/rustframe-platform-axum",
    "crates/rustframe-testing",
    "examples/hello-world",
    "examples/rest-api",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustframe/rustframe"
homepage = "https://github.com/rustframe/rustframe"
documentation = "https://docs.rs/rustframe"
authors = ["RustFrame contributors"]

[workspace.dependencies]
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.5.60", features = ["derive"] }
config = { version = "0.15.19", default-features = false, features = ["json", "toml"] }
convert_case = "0.11.0"
futures-util = "0.3.32"
http = "1.4.0"
proc-macro2 = "1.0.106"
prettyplease = "0.2.37"
quote = "1.0.45"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
syn = { version = "2.0.117", features = ["full"] }
tempfile = "3.23.0"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.43"

rustframe = { path = "crates/rustframe", version = "0.0.1" }
rustframe-common = { path = "crates/rustframe-common", version = "0.0.1" }
rustframe-config = { path = "crates/rustframe-config", version = "0.0.1" }
rustframe-core = { path = "crates/rustframe-core", version = "0.0.1" }
rustframe-di = { path = "crates/rustframe-di", version = "0.0.1" }
rustframe-http = { path = "crates/rustframe-http", version = "0.0.1" }
rustframe-macros = { path = "crates/rustframe-macros", version = "0.0.1" }
rustframe-openapi = { path = "crates/rustframe-openapi", version = "0.0.1" }
rustframe-openapi-macros = { path = "crates/rustframe-openapi-macros", version = "0.0.1" }
rustframe-platform = { path = "crates/rustframe-platform", version = "0.0.1" }
rustframe-platform-axum = { path = "crates/rustframe-platform-axum", version = "0.0.1" }
rustframe-testing = { path = "crates/rustframe-testing", version = "0.0.1" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
