[package]
name = "ironic"
description = "A batteries-included, type-safe application framework for Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["framework", "web", "dependency-injection", "axum", "openapi"]
categories = ["web-programming::http-server", "development-tools"]
include = [
    "/src/**/*.rs",
    "/crates/ironic-*/src/**/*.rs",
    "/crates/ironic-cli/README.md",
    "/crates/ironic-testing/README.md",
    "/crates/ironic/tests/ui/**/*.rs",
    "/crates/ironic/tests/ui/**/*.stderr",
    "/crates/ironic/tests/ui.rs",
    "/crates/ironic/benches/**/*.rs",
    "/crates/ironic-cli/tests/**/*.rs",
    "/crates/ironic-openapi/tests/**/*.rs",
    "/crates/ironic-testing/tests/**/*.rs",
    "/tests/**/*.rs",
    "/README.md",
    "/LICENSE-*",
]

[features]
default = []
database = ["sqlx", "seaorm", "diesel", "mongodb", "redis"]
sqlx = ["dep:sqlx"]
sqlx-postgres = ["sqlx", "sqlx/postgres"]
sqlx-mysql = ["sqlx", "sqlx/mysql"]
sqlx-sqlite = ["sqlx", "sqlx/sqlite"]
seaorm = ["dep:sea-orm"]
seaorm-postgres = ["seaorm", "sea-orm/sqlx-postgres"]
seaorm-mysql = ["seaorm", "sea-orm/sqlx-mysql"]
seaorm-sqlite = ["seaorm", "sea-orm/sqlx-sqlite"]
diesel = ["dep:diesel"]
mongodb = ["dep:mongodb"]
redis = ["dep:redis"]
auth = ["dep:argon2"]
jwt = ["auth", "dep:jsonwebtoken"]
oauth = ["auth", "dep:oauth2"]
sessions = ["auth", "dep:getrandom"]
authentication = ["auth", "jwt", "oauth", "sessions"]
cache = []
scheduling = []
events = []
realtime = ["axum/ws"]
application-services = ["cache", "scheduling", "events", "realtime"]
queues = []
microservices = []
cqrs = []
sagas = []
grpc = ["microservices", "dep:tonic"]
graphql = [
    "dep:async-graphql",
    "dep:async-graphql-derive",
    "dep:async-graphql-parser",
    "dep:async-graphql-value",
]
distributed = ["queues", "microservices", "cqrs", "sagas", "grpc", "graphql"]
plugins = []
devtools = ["axum/json"]
plugin-ecosystem = ["plugins", "devtools"]

[[bin]]
name = "ironic"
path = "crates/ironic-cli/src/main.rs"
doc = false

[[bench]]
name = "overhead"
path = "crates/ironic/benches/overhead.rs"
harness = false

[[test]]
name = "cli"
path = "crates/ironic-cli/tests/cli.rs"

[[test]]
name = "openapi"
path = "crates/ironic-openapi/tests/openapi.rs"

[[test]]
name = "testing"
path = "crates/ironic-testing/tests/testing.rs"

[[test]]
name = "ui"
path = "crates/ironic/tests/ui.rs"

[[test]]
name = "database-integrations"
path = "tests/database_integrations.rs"

[[test]]
name = "authentication"
path = "tests/authentication.rs"

[[test]]
name = "extended-features"
path = "tests/extended_features.rs"

[dependencies]
axum.workspace = true
clap.workspace = true
config.workspace = true
convert_case.workspace = true
futures-util.workspace = true
http.workspace = true
ironic-macros.workspace = true
prettyplease.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
syn.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
sqlx = { version = "0.8.6", optional = true, default-features = false, features = ["runtime-tokio", "migrate"] }
sea-orm = { version = "1.1.20", optional = true, default-features = false, features = ["runtime-tokio-rustls"] }
diesel = { version = "2.3.8", optional = true, default-features = false, features = ["r2d2", "32-column-tables"] }
mongodb = { version = "3.3.0", optional = true, default-features = false, features = ["rustls-tls", "dns-resolver", "bson-3", "compat-3-3-0"] }
redis = { version = "0.32.7", optional = true, default-features = false, features = ["aio", "tokio-comp", "connection-manager"] }
argon2 = { version = "0.5.3", optional = true, features = ["std"] }
getrandom = { version = "0.4.3", optional = true }
jsonwebtoken = { version = "9", optional = true, default-features = false }
oauth2 = { version = "5.0.0", optional = true, default-features = false, features = ["reqwest", "rustls-tls"] }
tonic = { version = "0.14.2", optional = true, default-features = false, features = ["transport", "codegen", "router"] }
async-graphql = { version = "=7.0.16", optional = true, default-features = false, features = ["graphiql"] }
async-graphql-derive = { version = "=7.0.16", optional = true }
async-graphql-parser = { version = "=7.0.16", optional = true }
async-graphql-value = { version = "=7.0.16", optional = true }

[dev-dependencies]
tempfile.workspace = true
trybuild = "1.0"

[lints]
workspace = true

[workspace]
resolver = "3"
members = [
    ".",
    "crates/ironic-macros",
    "examples/hello-world",
    "examples/rest-api",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ironic-org/ironic"
homepage = "https://github.com/ironic-org/ironic"
documentation = "https://docs.rs/ironic"
authors = ["Ironic contributors"]

[workspace.dependencies]
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.5.60", features = ["derive"] }
config = { version = "0.15.19", default-features = false, features = ["json", "toml"] }
convert_case = "0.11.0"
futures-util = "0.3.32"
http = "1.4.0"
proc-macro2 = "1.0.106"
prettyplease = "0.2.37"
quote = "1.0.45"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
syn = { version = "2.0.117", features = ["full"] }
tempfile = "3.23.0"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.43"

ironic = { path = ".", version = "0.1.0" }
ironic-macros = { path = "crates/ironic-macros", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
