[workspace.package]
version = "1.0.9"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ironic-org/ironic"
homepage = "https://github.com/ironic-org/ironic"
documentation = "https://docs.rs/ironic"
authors = ["Ironic contributors"]

[package]
name = "ironic"
description = "A batteries-included, type-safe application framework for Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["framework", "web", "dependency-injection", "axum", "openapi"]
categories = ["web-programming::http-server", "development-tools"]
include = [
    "/src/**/*.rs",
    "/crates/ironic-*/src/**/*.rs",
    "/crates/ironic-cli/README.md",
    "/crates/ironic-testing/README.md",
    "/crates/ironic/tests/ui/**/*.rs",
    "/crates/ironic/tests/ui/**/*.stderr",
    "/crates/ironic/tests/ui.rs",
    "/crates/ironic/benches/**/*.rs",
    "/crates/ironic-cli/tests/**/*.rs",
    "/crates/ironic-openapi/tests/**/*.rs",
    "/crates/ironic-testing/tests/**/*.rs",
    "/tests/**/*.rs",
    "/README.md",
    "/LICENSE-*",
]

[features]
default = ["hot-reload", "openapi", "logging"]
database = ["sqlx", "seaorm", "diesel", "mongodb", "redis"]
sqlx = ["dep:sqlx"]
sqlx-postgres = ["sqlx", "sqlx/postgres"]
sqlx-mysql = ["sqlx", "sqlx/mysql"]
sqlx-sqlite = ["sqlx", "sqlx/sqlite"]
seaorm = ["dep:sea-orm"]
seaorm-postgres = ["seaorm", "sea-orm/sqlx-postgres"]
seaorm-mysql = ["seaorm", "sea-orm/sqlx-mysql"]
seaorm-sqlite = ["seaorm", "sea-orm/sqlx-sqlite"]
diesel = ["dep:diesel"]
mongodb = ["dep:mongodb"]
redis = ["dep:redis"]
auth = ["dep:argon2"]
jwt = ["auth", "dep:jsonwebtoken"]
oauth = ["auth", "dep:oauth2"]
sessions = ["auth", "dep:getrandom"]
authentication = ["auth", "jwt", "oauth", "sessions"]
cache = []
scheduling = []
events = []
realtime = ["axum/ws"]
sse = []
application-services = ["cache", "scheduling", "events", "realtime"]
queues = []
microservices = []
cqrs = []
sagas = []
grpc = ["microservices", "dep:tonic"]
graphql = [
    "dep:async-graphql",
    "dep:async-graphql-derive",
    "dep:async-graphql-parser",
    "dep:async-graphql-value",
]
distributed = ["queues", "microservices", "cqrs", "sagas", "grpc", "graphql"]
plugins = []
devtools = ["axum/json"]
plugin-ecosystem = ["plugins", "devtools"]
metrics = []
resilience = []
resilience-ext = ["resilience"]
telemetry = ["dep:tracing-subscriber", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
security = ["security-cors", "security-rate-limit", "security-headers", "security-csrf"]
security-cors = ["dep:tower-http"]
security-rate-limit = ["dep:tower-http", "dep:redis"]
security-headers = ["dep:tower-http"]
security-csrf = ["dep:tower-http", "dep:uuid"]
compression = ["dep:tower-http"]
static-files = ["dep:tower-http", "tower-http/fs", "tower-http/set-header"]
multipart = ["dep:multer"]
uuid = ["dep:uuid"]
versioning = []
serialization = []
validation = ["dep:garde"]
cron = ["dep:cron", "dep:chrono"]
custom-decorators = []
backtrace = []
openapi = []
logging = ["dep:chrono", "dep:tracing-subscriber"]
hot-reload = ["dep:notify"]
transport-redis = ["dep:redis"]
transport-rabbitmq = ["dep:lapin"]
transport-kafka = ["dep:kafka"]
mcp = ["axum/json"]

[[bin]]
name = "ironic"
path = "crates/ironic-cli/src/main.rs"
doc = false

[[bench]]
name = "overhead"
path = "crates/ironic/benches/overhead.rs"
harness = false

[[bench]]
name = "metrics"
path = "crates/ironic/benches/metrics.rs"
harness = false
required-features = ["metrics"]

[[test]]
name = "cli"
path = "crates/ironic-cli/tests/cli.rs"

[[test]]
name = "openapi"
path = "crates/ironic-openapi/tests/openapi.rs"
required-features = ["openapi"]

[[test]]
name = "testing"
path = "crates/ironic-testing/tests/testing.rs"

[[test]]
name = "ui"
path = "crates/ironic/tests/ui.rs"

[[test]]
name = "database-integrations"
path = "tests/database_integrations.rs"

[[test]]
name = "authentication"
path = "tests/authentication.rs"

[[test]]
name = "extended-features"
path = "tests/extended_features.rs"

[dependencies]
axum.workspace = true
clap.workspace = true
config.workspace = true
convert_case.workspace = true
futures-util.workspace = true
http.workspace = true
ironic-macros.workspace = true
prettyplease.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
syn.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
sqlx = { version = "0.9.0", optional = true, default-features = false, features = ["runtime-tokio", "migrate"] }
sea-orm = { version = "1.1.20", optional = true, default-features = false, features = ["runtime-tokio-rustls"] }
diesel = { version = "2.3.8", optional = true, default-features = false, features = ["r2d2", "32-column-tables"] }
mongodb = { version = "3.3.0", optional = true, default-features = false, features = ["rustls-tls", "dns-resolver", "bson-3", "compat-3-3-0"] }
redis = { version = "1.3.0", optional = true, default-features = false, features = ["aio", "tokio-comp", "connection-manager"] }
argon2 = { version = "0.5.3", optional = true, features = ["std"] }
getrandom = { version = "0.4.3", optional = true }
jsonwebtoken = { version = "9", optional = true, default-features = false }
oauth2 = { version = "5.0.0", optional = true, default-features = false, features = ["reqwest", "rustls-tls"] }
tonic = { version = "0.14.2", optional = true, default-features = false, features = ["transport", "codegen", "router"] }
async-graphql = { version = "=7.0.16", optional = true, default-features = false, features = ["graphiql"] }
async-graphql-derive = { version = "=7.0.16", optional = true }
async-graphql-parser = { version = "=7.0.16", optional = true }
async-graphql-value = { version = "=7.0.16", optional = true }

tower-http = { workspace = true, optional = true }
multer = { workspace = true, optional = true }
garde = { workspace = true, optional = true }
cron = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
lapin = { workspace = true, optional = true }
kafka = { workspace = true, optional = true }
ureq = { version = "3.3.0", features = ["json"] }
notify = { version = "8.2.0", optional = true }
ctrlc = "3"
tracing-subscriber = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
trybuild = "1.0"

[lints]
workspace = true

[workspace]
resolver = "3"
members = [
    ".",
    "crates/ironic-macros",
    # "examples/blog-api",
]
exclude = ["fuzz"]



[workspace.dependencies]
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.5.60", features = ["derive"] }
config = { version = "0.15.19", default-features = false, features = ["json", "toml"] }
convert_case = "0.11.0"
futures-util = "0.3.32"
multer = "3.1.0"
http = "1.4.0"
proc-macro2 = "1.0.106"
prettyplease = "0.2.37"
quote = "1.0.45"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
syn = { version = "2.0.117", features = ["full"] }
tempfile = "3.23.0"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", default-features = false, features = ["cors", "set-header", "compression-gzip", "compression-br", "compression-zstd"] }
tracing = "0.1.43"
garde = { version = "0.23.0", features = ["derive"] }
cron = "0.17.0"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
lapin = { version = "4.10.0", default-features = false, features = ["rustls"] }
kafka = { version = "0.10.0", default-features = false, features = ["snappy"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.28", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.28", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.28", default-features = false, features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = { version = "0.29", default-features = false }
ironic = { path = ".", version = "1.0.9" }

ironic-macros = { path = "crates/ironic-macros", version = "1.0.9" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
