[package]
name = "rustframe-cli"
description = "Project scaffolding and Cargo orchestration for RustFrame"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rustframe"
path = "src/main.rs"
doc = false

[dependencies]
clap.workspace = true
convert_case.workspace = true
prettyplease.workspace = true
quote.workspace = true
syn.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
