[package]
name = "rustframe-core"
description = "Application kernel for RustFrame"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustframe-common.workspace = true
rustframe-di.workspace = true
rustframe-http.workspace = true
rustframe-platform.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
