[package]
name = "rustframe-di"
description = "Type-safe dependency injection for RustFrame"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustframe-common.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true

