[package]
name = "rustframe-http"
description = "Transport-neutral HTTP contracts for RustFrame"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
http.workspace = true
rustframe-common.workspace = true
rustframe-di.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
