[package]
name = "rustframe-openapi"
description = "OpenAPI generation and Swagger UI integration for RustFrame"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
rustframe-http.workspace = true
rustframe-openapi-macros.workspace = true
rustframe-platform.workspace = true
rustframe-platform-axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rustframe-di.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
