[package]
name = "rustframe-platform-axum"
description = "Axum platform adapter for RustFrame"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
rustframe-common.workspace = true
rustframe-http.workspace = true
rustframe-platform.workspace = true
tokio.workspace = true
tower.workspace = true
thiserror.workspace = true

[dev-dependencies]
rustframe-di.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
