[package]
name = "rustframe-testing"
description = "Testing utilities for RustFrame applications"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustframe-common.workspace = true
rustframe-core.workspace = true
rustframe-di.workspace = true
rustframe-http.workspace = true
rustframe-platform.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]

[lints]
workspace = true
