[package]
name = "rustframe"
description = "A modular, type-safe application framework for Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
rustframe-common.workspace = true
rustframe-config.workspace = true
rustframe-core.workspace = true
rustframe-di.workspace = true
rustframe-http.workspace = true
rustframe-macros.workspace = true
rustframe-platform.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
rustframe-platform-axum.workspace = true
rustframe-testing.workspace = true
serde.workspace = true
tower.workspace = true
trybuild = "1.0"

[[bench]]
name = "overhead"
harness = false

[lints]
workspace = true
