[package]
name = "auth-api"
description = "Ironic authentication API example — JWT, OAuth, RBAC"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ironic = { workspace = true, features = ["security", "compression", "metrics", "validation"] }
serde.workspace = true
serde_json.workspace = true
garde.workspace = true
dotenvy = "0.15"
jsonwebtoken = "9"
argon2 = "0.5"
oauth2 = "5.0"
getrandom = "0.4"

[dev-dependencies]
