[package]
name = "basic-api"
description = "Ironic production API example — CRUD, security, metrics, compression"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ironic = { workspace = true, features = ["security", "compression", "metrics", "validation"] }
serde.workspace = true
serde_json.workspace = true
garde.workspace = true
dotenvy = "0.15"

[dev-dependencies]
