[package]
name = "blog-api"
description = "Ironic blog API example — CRUD, categories, cross-module DI, search, stats"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ironic = { workspace = true, features = ["security", "compression", "metrics", "validation", "cache", "logging", "scheduling", "cron", "openapi"] }
serde.workspace = true
garde.workspace = true
uuid.workspace = true
dotenvy = "0.15"
jsonwebtoken = "9"

[dev-dependencies]
