[package]
name = "blog-api"
description = "Ironic blog API example — CRUD, categories, cross-module DI, search, stats"
publish = false
version = "1.0.4"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"

[dependencies]
ironic = { path = "../..", version = "1.0.4", features = ["security", "compression", "metrics", "validation", "cache", "logging", "scheduling", "cron", "openapi"] }
serde = { version = "1.0.228", features = ["derive"] }
garde = { version = "0.23.0", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"

[dev-dependencies]
