[package]
name = "dev"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
publish = false

[dependencies]
ironic = { features = ["security", "compression", "metrics", "validation", "versioning", "openapi", "logging", "sqlx-postgres", "scheduling", "cron"], version = "1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
garde = "0.23"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres"] }
tracing = { version = "0.1", features = ["attributes"] }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
jsonwebtoken = "10.4.0"
uuid = "1.24.0"
[dev-dependencies]

# Available features (uncomment to enable):
# serialization   — role-based field exposure
# cache           — CacheInterceptor with InMemoryCache
# scheduling      — Fixed-interval and cron background tasks
# cron            — Cron expression scheduling
# realtime        — WebSocket gateways with rooms/broadcasting
# resilience      — Retry with backoff + circuit breaker
# telemetry       — Distributed tracing (OTLP)
# auth            — Password hashing, JWT, OAuth2, sessions
# distributed     — Queues, microservices, CQRS, sagas, gRPC, GraphQL
