[package]
name = "hello-world"
description = "Minimal Ironic workspace example"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ironic.workspace = true
serde.workspace = true

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
tower.workspace = true

[lints]
workspace = true
