[package]
name = "rest-api"
description = "RustFrame REST, validation, error-handling, and testing example"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rustframe.workspace = true
rustframe-openapi.workspace = true
rustframe-platform-axum.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rustframe-testing.workspace = true
tokio.workspace = true

[lints]
workspace = true
