[package]
name = "rest-api"
description = "Ironic REST, validation, error-handling, and testing example"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ironic.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
