[package]
name = "todo-api"
description = "Ironic TODO API — full CRUD example built with ironic CLI"
publish = false
version = "0.1.0"
edition = "2024"
rust-version = "1.97"

[dependencies]
ironic = { version = "0.2", features = ["validation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
garde = "0.23"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[workspace]
