[package]
name = "todo-example"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
publish = false

[dependencies]
ironic = { features = ["security", "compression", "metrics", "validation", "sqlx-postgres", "telemetry", "cache", "scheduling"], path = "../..", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
garde = "0.23"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
